# TFTP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  makefile  tftp_c.c  tftp_s.c  utility.h  win_unistd.h
